--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ rss: rss
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
-# Minima date format
+# Minima-AIESEC date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
-minima:
+minima-AIESEC:
   date_format: "%b %-d, %Y"
 
 # If you want to link only specific pages in your header, uncomment
@@ -44,7 +44,7 @@ minima:
 # - about.md
 
 # Build settings
-theme: minima
+theme: minima-AIESEC
 
 plugins:
  - jekyll-feed
